# itc-gic-c-programming

./: CMakeLists.txt  LICENSE  README.md
03_section/: 01_test.c
04_section/: 01.c  01.h  main.c
05/: 01.c  01.h  02.c  02.h  main.c
05-variable-and-data-type/enum/: enum-company.c
05-variable-and-data-type/perform-math-calculations/: main.c  rectangle.c  rectangle.h
05-variable-and-data-type/variables-and-data-type/: main.c
05_variable_and_data_type/: exercise.c  main.c  main.h
test/: 01.c  02.c  main.c  main.h
